# claudometer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  build.py  build.spec  config.example.json  deploy.py  pyproject.toml
.serena/: project.yml
docs/: ARCHITECTURE.md
sensehat/: README.md  __init__.py  app.py  claudometer-sensehat.service  data_source.py  display.py  env.example  env_loader.py  requirements.txt  run.sh  sense_compat.py
src/: __init__.py  api_client.py  config.py  icon_generator.py  main.py  notifications.py  startup.py  tray_icon.py  utils.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_notifications.py  test_sensehat_display.py
